syntax = "proto3";

package ollyllm.v1;

import "google/protobuf/timestamp.proto";

message Span {
  string id = 1; // ID of the span
  google.protobuf.Timestamp start_timestamp = 2; // Timestamp of span start
  google.protobuf.Timestamp end_timestamp = 3; // Timestamp of span ending
  string operation_name = 4; // Name of the operation that span takes place in
  string parent_id = 5; // ID of the span's parent, if exists
  string trace_id = 6; // ID of the span's trace
  string external_uuid = 7; // User facing ID of the span
}

/* ReportSpanRequest represents a request to submit one or more spans */
message ReportSpanRequest {
    repeated Span spans = 1;
}

